--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,44 +1,37 @@
 .Team{
   background-color: 	#11244b;
-
   padding-top: 10vh;
   padding-bottom: 10vh;
   
 }
 .Team h1{
-  
-  padding-top: 10vh;
+  padding-top: 0vh;
   text-align: left;
-  padding-left: 7.5vw;
+  margin-left: 5vw;
   padding-right: 40vw;
   font-weight: 50;
-  padding-bottom: 5vh;
+  padding-bottom: 0vh;
   color:whitesmoke;
   font-size: 40px;
-  
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  
-
 }
 .TeamHeader {
-  display:flex;
+  display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   justify-content: center;
-  height:25vh;
+  height: 30vh;
+  width: 100vw;
   /**background-image: url(../assets/Campus_Aerial_View_2_blurry.jpeg);**/
   background-color: #0d1b38;
-  padding-bottom: 50px;
   /**border-bottom: 3px solid whitesmoke;**/
-  
-
-  
 }
   
 .TeamList {
   border: 3px;
-  padding-top: 5vh;
+  padding-top: 5vw;
   margin-left: 5vw;
+  padding-bottom: 5vw;
   width: 90vw;
   height: auto;
   display: grid;
@@ -50,14 +43,120 @@
 }
 
 
+@media only screen and (max-width: 1400px) {
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 30vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 40px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+}
 @media only screen and (max-width: 1300px) {
-  .TeamList {
-    grid-template-columns: 1fr 1fr;
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 25vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 40px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 18vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 40px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 20vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 38px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 20vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 36px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
 }
   
 @media only screen and (max-width: 800px) {
-  .TeamList {
-    grid-template-columns: 1fr;
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 8vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 34px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
+  .TeamList {
+    grid-template-columns: 1fr 1fr;
+  }
+ 
+}
+@media only screen and (max-width: 600px) {
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 8vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 30px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  .TeamList {
+    grid-template-columns: 1fr 1fr;
+  }
+ 
+}
+@media only screen and (max-width: 600px) and (max-height:800px) {
+  .Team h1{
+    padding-top: 0vh;
+    text-align: left;
+    margin-left: 5vw;
+    padding-right: 8vw;
+    font-weight: 50;
+    padding-bottom: 0vh;
+    color:whitesmoke;
+    font-size: 25px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  .TeamList {
+    grid-template-columns: 1fr 1fr;
+  }
+ 
 }
